--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -23,17 +17,58 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
 
 .nut-bam-len-tren {
   position: fixed;
   bottom: 20px;
   right: 20px;
+}
+
+.App-logo-quay-xuoi {
+  animation: spin-quay-xuoi infinite 4s linear;
+  height: 40vmin;
+  position: absolute;
+  left: 20%;
+}
+@keyframes spin-quay-xuoi {
+  0% {
+    transform: rotateY(0deg);
+    left: 10%;
+    opacity: 1;
+  }
+  50% {
+    transform: rotateY(360deg);
+    left: 70%;
+    opacity: 0.1;
+  }
+  100% {
+    transform: rotateY(0deg);
+    left: 10%;
+    opacity: 1;
+  }
+}
+
+.App-logo-quay-nguoc {
+  animation: spin-quay-nguoc infinite 4s linear;
+  height: 40vmin;
+  position: absolute;
+  top: 0%;
+}
+@keyframes spin-quay-nguoc {
+  0% {
+    transform: rotateX(0deg);
+    top: 30%;
+    opacity: 1;
+  }
+  50% {
+    transform: rotateX(360deg);
+    top: 70%;
+    opacity: 0.1;
+  }
+  100% {
+    transform: rotateX(0deg);
+    top: 30%;
+    opacity: 1;
+  }
 }
