--- a/src/All.css
+++ b/src/All.css
@@ -22,3 +22,12 @@
   padding: 10px;
   opacity: 60%;
 }
+.da-bam{
+  border-style: solid;
+  border-width: 3px;
+  border-color: red;
+  border-radius : 20px;
+}
+.chua-bam{
+  border-style: none;
+}
