--- a/src/All.css
+++ b/src/All.css
@@ -20,7 +20,7 @@
   right: 70px;
   background-color: black;
   padding: 10px;
-  opacity: 100%;
+  opacity: 0.6;
 }
 .da-bam{
   border-style: solid;
